--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "phpdocumentor/reflection-docblock": "1.0.*"
     },
     "autoload":{
         "psr-0": {"Packfire\\Blaze\\":"src"}
