--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "phpdocumentor/reflection-docblock": "1.0.*"
+        "phpdocumentor/reflection-docblock": "1.0.*",
+        "symfony/finder": "2.2.*"
     },
     "autoload":{
         "psr-0": {"Packfire\\Blaze\\":"src"}
