--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": ">=5.3.0",
         "phpdocumentor/reflection-docblock": "1.0.*",
-        "symfony/finder": "2.2.*"
+        "symfony/finder": "2.2.*",
+        "packfire/config": "1.0.*"
     },
     "autoload":{
         "psr-0": {"Packfire\\Blaze\\":"src"}
