--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=5.3.0",
         "phpdocumentor/reflection-docblock": "1.0.*",
         "symfony/finder": "2.2.*",
-        "packfire/config": "1.0.*"
+        "packfire/config": "1.0.*",
+        "packfire/fuelblade": "1.1.*"
     },
     "autoload":{
         "psr-0": {"Packfire\\Blaze\\":"src"}
